// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<autocomplete-single> matches snapshot (default render) 1`] = `
<autocomplete-single input-id="fruit" label="Fruits" placeholder="Type to search...">
  <div class="autocomplete-container form-group">
    <div>
      <label class="form-control-label" htmlfor="fruit">
        <span>
          Fruits
        </span>
      </label>
      <div>
        <div class="autocomplete-single-select input-group">
          <input aria-autocomplete="list" aria-controls="fruit-listbox" aria-expanded="false" aria-haspopup="listbox" aria-labelledby="" aria-required="false" autocomplete="off" class="form-control" id="fruit" inputmode="text" name="fruits" placeholder="Fruits" role="combobox" spellcheck="false" type="" value="">
        </div>
      </div>
    </div>
  </div>
</autocomplete-single>
`;

exports[`<autocomplete-single> matches snapshot (dropdown open with matches) 1`] = `
<autocomplete-single input-id="fruit" label="Fruits">
  <div class="autocomplete-container form-group">
    <div>
      <label class="form-control-label" htmlfor="fruit">
        <span>
          Fruits
        </span>
      </label>
      <div>
        <div class="autocomplete-single-select input-group">
          <input aria-autocomplete="list" aria-controls="fruit-listbox" aria-expanded="true" aria-haspopup="listbox" aria-labelledby="" aria-required="false" autocomplete="off" class="form-control" id="fruit" inputmode="text" name="fruits" placeholder="Fruits" role="combobox" spellcheck="false" type="" value="an">
          <button aria-label="Clear input" class="clear clear-btn input-group-btn" role="button" title="Clear input">
            <svg class="fa-icon" viewBox="0 0 384 512" xmlns="http://www.w3.org/2000/svg">
              <path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s-12.5-32.8 0-45.3L237.3 256 342.6 150.6z"></path>
            </svg>
          </button>
        </div>
        <div aria-live="polite" class="autocomplete-dropdown">
          <ul id="fruit-listbox" role="listbox" tabindex="-1">
            <li aria-selected="false" class="autocomplete-dropdown-item" id="fruit-option-0" role="option" tabindex="-1">
              <span>
                Banana
              </span>
            </li>
            <li aria-selected="false" class="autocomplete-dropdown-item" id="fruit-option-1" role="option" tabindex="-1">
              <span>
                Orange
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</autocomplete-single>
`;
